# yhaplo

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  __init__.py  callHaplogroups.py  config.py  convert2genos.py  node.py  page.py  path.py  plotTree.py  pyproject.toml  sample.py  setup.cfg  setup.py  snp.py  test_github_yhaplo.sh  tox.ini  tree.py  utils.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
input/: isogg.correct.coordinate.txt  isogg.correct.polarize.txt  isogg.omit.bad.23andMe.txt  isogg.omit.bad.txt  isogg.omit.branch.conflict.txt  preferred.snpNames.txt  representative.SNPs.isogg.2015tree.txt  y.tree.primary.2016.01.04.nwk
scripts/: identify_mutation_updates.py  look_up_seq_genotypes.py  update_snp_metadata_corrections.py  validate_yhaplo.sh
tests/: common.py  module_loads_test.py  test_calling_text.py  test_calling_vcf.py  test_load_module.py  test_tree.py  test_utils_loaders.py  test_utils_optional_dependencies.py  test_utils_vcf.py
tests/fixtures/: generate_bcf_fixtures.sh  utils.sh
tests/fixtures/input/: HG01938.vcf.gz.tbi
tests/fixtures/output/: haplogroups.1000Y.all.txt  haplogroups.1000Y.subset.txt  haplogroups.HG01938.txt  haplogroups.no_data.txt
yhaplo/: __init__.py  call_haplogroups.py  config.py  convert_to_genos.py  node.py  page.py  path.py  plot_tree.py  sample.py  snp.py  tree.py  utils.py
yhaplo/api/: __init__.py  call_haplogroups.py  command_line_args.py
yhaplo/cli/: convert_to_genos.py  plot_tree.py  yhaplo.py
yhaplo/data/: __init__.py
yhaplo/data/tree/: __init__.py
yhaplo/data/variants/: __init__.py  isogg.2016.01.04.txt  isogg.correct.mutation.txt  isogg.correct.name.txt  isogg.correct.position.txt  isogg.omit.bad.23andMe.txt  isogg.omit.bad.txt  isogg.omit.branch.conflict.txt  isogg.omit.name.txt  isogg.split.txt  representative.SNPs.isogg.2015_tree.txt
yhaplo/input/: isogg.correct.polarize.txt  isogg.multiallelic.txt  isogg.omit.branch.conflict.23andMe.v5.txt  representative.SNPs.additional.txt
yhaplo/utils/: context_managers.py  loaders.py  optional_dependencies.py  vcf.py
