[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "yhaplo"
description = "Y-chromosome haplogroup caller"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Population Genetics R&D"},
    {email = "popgen.rd@23andme.com"},
]

dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
]

dynamic = ["version"]

[project.optional-dependencies]
vcf = [
    "pysam",
]
plot = [
    "biopython",
]
dev = [
    "yhaplo[vcf,plot]",
    "ipykernel",
    "ipython",
    "pytest",
    "setuptools_scm",
    "tabulate",
]

[project.scripts]
yhaplo = "yhaplo.cli.yhaplo:main"
yhaplo_convert_to_genos = "yhaplo.cli.convert_to_genos:main"
yhaplo_plot_tree = "yhaplo.cli.plot_tree:main"

[project.urls]
Homepage = "https://github.com/23andMe/yhaplo"
Documentation = "https://github.com/23andMe/yhaplo/blob/master/yhaplo_manual.pdf"
Repository = "https://github.com/23andMe/yhaplo.git"
Changelog = "https://github.com/23andMe/yhaplo/blob/master/CHANGELOG.md"

[tool.setuptools_scm]

[tool.isort]
profile = "black"
filter_files = true

[tool.mypy]
ignore_missing_imports = true

[tool.pydocstyle]
# D107 Missing docstring in __init__
# D202 No blank lines allowed after function docstring
#      Ignoring allows blank lines after one-line docstrings.
# D203 1 blank line required before class docstring
#      Conflicts with black 24.
# D211 No blank lines allowed before class docstring
#      Contradicts D203.
# D213 Multi-line docstring summary should start at the second line
#      Contradicts D212.
#      https://github.com/PyCQA/pydocstyle/issues/242#issuecomment-288166773
ignore = "D107,D202,D203,D211,D213"
match_dir = "(?!tests|\\.).*"

[tool.pytest.ini_options]
norecursedirs = [
    ".*",
    "build",
]
